--- a/app/views/main/_form.html.erb
+++ b/app/views/main/_form.html.erb
@@ -11,7 +11,7 @@
   </div>
   <div class = 'formpart'>
   <div class="field">
-    <%= label_tag :weight, 'Вес, кг'%><br/>
+    <%= label_tag :weight, 'Примерный вес, кг*'%><br/>
     <%= text_field_tag :weight, params[:weight] %><br/>
   </div>
   <div class="field">
