--- a/app/views/deliveries/show.html.erb
+++ b/app/views/deliveries/show.html.erb
@@ -10,6 +10,18 @@
   <%= @delivery.website %>
 </p>
 
+<p>
+  <b>Extra:</b>
+  <%= @delivery.extra1 %>
+</p>
+<p>
+  <b>Extra:</b>
+  <%= @delivery.extra2 %>
+</p>
+<p>
+  <b>Extra:</b>
+  <%= @delivery.extra3 %>
+</p>
 
 <%= link_to 'Edit', edit_delivery_path(@delivery) %> |
 <%= link_to 'Back', deliveries_path %>
