--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,6 @@
 <div class = 'deliveryform window'>
 	<%= render 'form' %>
+	<div id = "notification"><br/>Заполните поля</div>
 </div>
 
 <% if !(params[:from].nil?||params[:to].nil?) %>
