--- a/app/views/deliveries/_form.html.erb
+++ b/app/views/deliveries/_form.html.erb
@@ -19,6 +19,18 @@
     <%= f.label :website %><br />
     <%= f.text_field :website %>
   </div>
+  <div class="field">
+    <%= f.label :extra1 %><br />
+    <%= f.text_field :extra1 %>
+  </div>
+  <div class="field">
+    <%= f.label :extra2 %><br />
+    <%= f.text_field :extra2 %>
+  </div>
+  <div class="field">
+    <%= f.label :extra3 %><br />
+    <%= f.text_field :extra3 %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
