--- a/app/views/main/_result.html.erb
+++ b/app/views/main/_result.html.erb
@@ -3,14 +3,16 @@
 			<th>Компания</th>
 			<th>Тип доставки</th>
 			<th>Цена, рублей</th>
-			<th>Срок доставки</th>
+			<th>Срок доставки, дней</th>
 		</tr>
 	<% @providersQuote.each do |providerQuote| %>
+		<% if !providerQuote.price.nil? %>
 		<tr>
-			<td><%= providerQuote.companyName %></td>
-			<td>Экспресс </td>
+			<td><%= link_to providerQuote.companyName,"http://google.com" %></td>
+			<td><%= providerQuote.typeName%> </td>
 			<td><%= providerQuote.price %></td>
 			<td><%= providerQuote.time %></td>
 		</tr>
+		<%end%>
 	<% end %>
 	</table>
