--- a/app/views/deliveries/edit.html.erb
+++ b/app/views/deliveries/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing delivery</h1>
-
+<div class = 'window'>
 <%= render 'form' %>
-
+</div>
 <%= link_to 'Show', @delivery %> |
 <%= link_to 'Back', deliveries_path %>
