--- a/app/views/main/_table.js.erb
+++ b/app/views/main/_table.js.erb
@@ -7,6 +7,7 @@ var content = "<%= escape_javascript render(:partial => 'main/result')%>";
 $('#result_placeholder').html(content);
 $('#load').show();
 //prepare transfer of parameters to ajax
+console.log("<%=params[:weight].to_f%>");
 var parameters = {
 	from:"<%=params[:from]%>",
 	to:"<%=params[:to]%>",
@@ -32,7 +33,6 @@ for (index in delivery_ids){
 	 	num+=1;
 	 	//check if last deliveries to stop load animation and check if found something
 	 	if (num==number_of_deliveries){
-	 		console.log("delete!");
 	 		$('#load').hide();
 	 	}
 	});
