--- a/app/views/main/_table.js.erb
+++ b/app/views/main/_table.js.erb
@@ -36,6 +36,11 @@ $(function(){
 		 	//and check if found something
 		 	if (num==number_of_deliveries){
 		 		$('#load').hide();
+		 		console.log($("#resultTable tr").length);
+		 		if ($("#resultTable tr").length<2){
+		 			var nothing = "<%= j render(:partial => 'main/nothing')%>";
+		 			$('#result_placeholder').html(nothing);
+		 		}
 		 	}
 		});
 		xhr_pool.push(xhr);
