--- a/app/views/deliveries/_form.html.erb
+++ b/app/views/deliveries/_form.html.erb
@@ -31,6 +31,10 @@
     <%= f.label :extra3 %><br />
     <%= f.text_field :extra3 %>
   </div>
+  <div class="field">
+    <%= f.label :image_url %><br />
+    <%= f.text_field :image_url %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
