--- a/app/views/deliveries/index.html.erb
+++ b/app/views/deliveries/index.html.erb
@@ -20,6 +20,7 @@
     <td><%= delivery.extra1 %></td>
     <td><%= delivery.extra2 %></td>
     <td><%= delivery.extra3 %></td>
+    <td><%= image_tag delivery.image_url %></td>
     <td><%= link_to 'Show', delivery %></td>
     <td><%= link_to 'Edit', edit_delivery_path(delivery) %></td>
     <td><%= link_to 'Destroy', delivery, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
