--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,8 +14,7 @@ body{
 	margin:0;
 	padding:0;
 	width:100%;
-	background-image: url("/assets/back.jpg");
-	
+	background-image: url("back.jpg");
 }
 
 /*General  stuff*/
