--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -27,9 +27,9 @@ bkLib.onDomLoaded(function() { nicEditors.allTextAreas() });
     <%= f.label :linkname %><br />
     <%= f.text_field :linkname %>
   </div>
-  <div class="field">
+  <div class="field table-text-area">
     <%= f.label :content %><br />
-    <%= f.text_area :content %>
+    <%= f.text_area :content%>
   </div>
   <div class="actions">
     <%= f.submit %>
