--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -113,3 +113,12 @@ body{
 	margin-left:10px;
 	width:110px;
 }
+
+/*pages*/
+#page_content{
+	width:100%;
+	height:350px;
+}
+.page-content img{
+	padding:5px 20px;
+}
