--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,27 +1,15 @@
-<h1>Listing pages</h1>
-
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Link</th>
-    <th>Content</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<div class = 'window window-vpadding'>
+  <h2>Все страницы</h2>
 
 <% @pages.each do |page| %>
-  <tr>
-    <td><%= page.title %></td>
-    <td><%= page.linkname %></td>
-    <td><%= page.content %></td>
-    <td><%= link_to 'Show', page %></td>
-    <td><%= link_to 'Edit', edit_page_path(page) %></td>
-    <td><%= link_to 'Destroy', page, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
-  </tr>
+  <div>
+      <div>
+        <b><%= link_to page.title, page_path(page) %></b>
+      </div>
+      <div>
+        <%= page.content.html_safe %>
+      </div>
+      <br/>
+  </div>
 <% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Page', new_page_path %>
+</div>
