--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,5 +1,5 @@
 
-<div class = 'window'/>
+<div class = 'window page-content'/>
   <div class = 'pagetitle'><%= @page.title %></div>
   <div class = 'pagecontent'><%= @page.content.html_safe %></div>
 </div>
