--- a/app/views/main/index.js.erb
+++ b/app/views/main/index.js.erb
@@ -17,6 +17,8 @@ if (message!='')
 	}
 else
 	{
-		
+		//hide all warning notifications
+		$('#notification').css("display","none");
+		//render result table
 		<%=render :partial =>"table.js.erb"%>	
 	}
