--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,6 +44,9 @@ body{
 	width:250px;
 	text-align:center;
 }
+.logo img{
+	width:140px;
+}
 /*Input form stuff*/
 .deliveryform{
 	overflow:hidden;
@@ -112,13 +115,4 @@ body{
 .footer span:first-child{
 	margin-left:10px;
 	width:110px;
-}
-
-/*pages*/
-#page_content{
-	width:100%;
-	height:350px;
-}
-.page-content img{
-	padding:5px 20px;
 }
