--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -4,10 +4,15 @@
 
 
 .pagetitle{
-	font-weight:600;
-	font-size:120%;
 	padding-bottom:10px;
 }
 .pagetitle, .pagecontent{
 	margin:0 20px;
+}
+#page_content{
+	width:100%;
+	height:350px;
+}
+.page-content img{
+	padding:5px 20px;
 }
