--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,3 @@
 <div class = 'headpart'> 
-	<span class = 'logo'><a href = '/'><%= image_tag 'logo.png', :height => '42px' %></a></span> 
+	<span class = 'logo'><a href = '/'><%= image_tag 'logo.png'%></a></span> 
 </div>
