--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -101,11 +101,16 @@ body{
 
 #load{
 	width:100%;
+	display:none;
 }
 #load img{
 	display:block;
 	margin:0 auto;
+	height:40px;
 	width:40px;
+}
+#images_cache{
+	display:none;
 }
 /*footer*/
 .footer span{
