refactor table.js

--- a/app/assets/javascripts/deliveries_helper.js.erb
+++ b/app/assets/javascripts/deliveries_helper.js.erb
@@ -27,7 +27,7 @@ var check_parameters = function(params){
 	if (params["from"]==""){
 		message.push("город отправления");
 	}
-	if (params["from"]==""){
+	if (params["to"]==""){
 		message.push("город доставки");
 	}
 	var size_blank = ((params["height"]=="")||(params["length"]=="")||(params["width"]==""));
